--- a/frontend/src/app/basicgame/basicgame.component.html
+++ b/frontend/src/app/basicgame/basicgame.component.html
@@ -1,3 +1,12 @@
-<p>
-  basicgame works!
-</p>
+<div class="container main">
+  <div class="row">
+    <div class="col-md-6 col-sm-12">
+      <alert type="info">
+        welcome by game: {{ game.id }}
+      </alert>
+      <ul>
+        <li *ngFor="let player of game.playerList">{{player.name}}</li>
+      </ul>
+    </div>
+  </div>
+</div>
